@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
  
 AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(gnomesword, 0.7.2a)
+AM_INIT_AUTOMAKE(gnomesword, 0.7.3)
 AM_CONFIG_HEADER(config.h)
 
 dnl 
