@@ -93,7 +93,8 @@ gui_create_about_gnomesword(void)
     "Victor Porton  porton@users.sf.net",
     "Stephen Binks steveb@icenet.com.au",
     "Carl Constantine duckwing@users.sf.net",
-    "Jorge Chacon <jgchacon@itelgua.com>",
+    "Jorge Chacon jgchacon@itelgua.com",
+    "Jp Robinson  robinson@knightmail.com",
     NULL
   };
   GtkWidget *about;
